Update frontend package.json, add AuthRoutes.js, modify Readme.md and settings.py

--- a/frontend/src/components/css/Note.css
+++ b/frontend/src/components/css/Note.css
@@ -12,6 +12,11 @@
     justify-content: space-between;
     word-wrap: break-word;
 }
+.note__header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .note__footer {
     display: flex;
     align-items: center;
@@ -67,6 +72,12 @@
     cursor: pointer;
 }
 .note__delete:hover {
+    transform: scale(1.2);
+}
+.note__edit {
+    cursor: pointer;
+}
+.note__edit:hover {
     transform: scale(1.2);
 }
 .char__progress {
